# SnowSync

./: .env.example  .gitignore  LICENSE  README.md
.github/workflows/: release.yml
docs/: README.en.md  README.zh.md
scripts/: dev.sh
server/: Cargo.toml
server/src/: config.rs  connect_html.rs  main.rs  mount.rs  relay.rs  server.rs  state.rs  tls.rs  webdav_bridge.rs  ws.rs
web/: next.config.ts  package-lock.json  package.json  postcss.config.mjs
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/clients/: route.ts
web/app/api/connect-html/: route.ts
web/app/api/mount/: route.ts
web/app/api/mounts/: route.ts
web/app/api/relay/[clientId]/: route.ts
web/app/api/unmount/: route.ts
web/app/browse/: page.tsx
web/app/connect/: page.tsx
web/components/: AuthProvider.tsx  ClientList.tsx  MountInstructions.tsx  Providers.tsx  RemoteBrowser.tsx  ServerStatus.tsx  Sidebar.tsx  Toast.tsx
web/lib/: types.ts
