# SNOWCODE - ソフトウェア製品
# (C) SNOWCODE
# 開発者: 雪符しき
# https://snowcode.jp
# 問い合わせ: info@snowcode.jp

[package]
name = "ljc-server"
version = "0.1.0"
edition = "2021"
authors = ["雪符しき <info@snowcode.jp>"]
homepage = "https://snowcode.jp"
license = "LicenseRef-SNOWCODE-Proprietary"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Local IP detection
local-ip-address = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# WebDAV
dav-server = "0.8"
http = "1.0"
http-body-util = "0.1"
bytes = "1"

# Utility
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"

# TLS (self-signed cert for WebDAV mount on macOS Tahoe)
rcgen = "0.13"
rustls = "0.23"
rustls-pki-types = "1"
tokio-rustls = "0.26"
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "service"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
